--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,8 @@ http {
 
   server {
 
+    add_header 'Access-Control-Allow-Origin' '*';
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
     listen 80;
 
     client_max_body_size 4G;
